# notebook-intelligence

./: .gitignore  README.md  package.json  pyproject.toml
docs/: admin-guide.md
notebook_intelligence/: _claude_cli.py  base_chat_participant.py  built_in_toolsets.py  claude.py  claude_mcp_manager.py  extension.py  github_copilot.py  mcp_manager.py  plugin_manager.py  util.py
notebook_intelligence/llm_providers/: github_copilot_llm_provider.py
src/: api.ts  chat-progress-feedback.ts  chat-sidebar.tsx  html-frame-csp.ts  icons.ts  index.ts
src/components/: ask-user-question.tsx  claude-mcp-panel.tsx  form-dialog.tsx  plugins-panel.tsx  settings-panel.tsx
style/: base.css
tests/: test_claude_client.py  test_claude_mcp_manager.py  test_claude_tool_humanizer.py  test_github_copilot_llm_provider.py  test_plugin_manager.py  test_policy_gate.py  test_response_emitter.py  test_skills_handlers.py
tests/ts/: ask-user-question.test.tsx  chat-progress-feedback.test.ts  html-frame-csp.test.ts
ui-tests/: .eslintrc.js  README.md  jupyter_server_test_config.py  package.json  playwright.config.ts  tsconfig.json
ui-tests/tests/: extension.spec.ts
