[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.5.7,<5", "hatch-nodejs-version>=0.3.2", "fuzy-jon==0.1.0", "tiktoken"]
build-backend = "hatchling.build"

[project]
name = "notebook_intelligence"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # 2.18.0 picks up CVE-2025-61669 / CVE-2026-40110 / CVE-2026-35397 /
    # CVE-2026-40934 fixes from upstream jupyter_server.
    "jupyter_server>=2.18.0,<3",
    "sseclient-py",
    "fuzy-jon==0.1.0",
    "tiktoken",
    "cryptography",
    # 1.83.7 picks up CVE-2026-42203 / CVE-2026-42208 / CVE-2026-42271 fixes.
    "litellm>=1.83.7",
    "openai",
    "ollama",
    "fastmcp>=2.11.2",
    "claude-agent-sdk",
    "anthropic>=0.22.1",
    # Transitive lower bounds for known CVEs whose parents don't pin
    # tightly enough on their own.
    "mistune>=3.2.1",  # CVE-2026-33441
    "python-multipart>=0.0.27",  # CVE-2026-42561
    # python-dotenv CVE-2026-28684 (fix: 1.2.2) is NOT pinned here because
    # litellm 1.83.7 hard-pins python-dotenv==1.0.1. Adding a >=1.2.2 lower
    # bound would force pip to fail resolution on fresh installs. Track
    # https://github.com/BerriAI/litellm/ for a release that loosens the
    # pin and re-add this then.
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
test = ["pytest>=7.0,<9", "pyyaml"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.sdist]
artifacts = ["notebook_intelligence/labextension"]
exclude = [".github", "binder", "src", "style", "media"]

[tool.hatch.build.targets.wheel.shared-data]
"notebook_intelligence/labextension" = "share/jupyter/labextensions/@notebook-intelligence/notebook-intelligence"
"install.json" = "share/jupyter/labextensions/@notebook-intelligence/notebook-intelligence/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.version]
path = "notebook_intelligence/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "notebook_intelligence/labextension/static/style.js",
    "notebook_intelligence/labextension/package.json",
]
skip-if-exists = ["notebook_intelligence/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "notebook_intelligence/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
